--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
         <body>
             <p>It was a dark and stormy night...</p>
+            <p>When suddenly there was a knock at he door</p>
+            <p>Three times they knocked</p>
+            <p>One... Two... Three...</p>
         </body>
 </html>
