second line of story

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-        <body>
-            <p>It was a dark and stormy night...</p>
-       </body>
+  <body>
+    <p>It was a dark and stormy night... thunder clapped and lightning bolted. </p>
+<p>Here is the second line of the story</p> 
+</body>
+
 </html>
