added an other line

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
-  <body>
-    <p>It was a dark and stormy night... thunder clapped and lightning bolted. </p>
-<p>Here is the second line of the story</p> 
-</body>
-
+        <body>
+            <p>It was a dark and stormy night...</p>
+            <p>The Thunder rolls, and the lightning strikes</p>
+       </body>
 </html>
