--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
         <body>
             <p>It was a dark and stormy night...</p>
             <p>The Thunder rolls, and the lightning strikes</p>
+            <p>somthing random</p>
        </body>
 </html>
